--- a/woocommerce/print-order/style.css
+++ b/woocommerce/print-order/style.css
@@ -336,6 +336,10 @@ h2 {
 	margin-bottom: 1.25em;
 }
 
+.gateway-price {
+	display: none;
+}
+
 
 /* CSS Media Queries for Print
 ------------------------------------------*/
